--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<title>UAS MOBWEB</title>
 	<meta name='viewport' content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="./smartphone.css">
-	<link rel="stylesheet" media="(min-width:480px)" type="text/css" href="./desktop.css">
+	<link rel="stylesheet" media="(min-width:480px)" type="text/css" href="./css/1.css">
+	<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="./css/2.css">
+	
 
 </head>
 <body>
